# bytecore

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  postStartCommand.sh
.github/: dependabot.yml
.github/workflows/: build-test-publish.yml  python-package.yml
src/: accumulator.py  byte.py  byte_register.py  constant_register.py  control_unit.py  control_unit_state.py  cpu.py  emulator.py  memory.py  opcode.py  proxy_register.py  register.py  replay_register.py  state.py
src/bytecore/: accumulator.py  bit.py  byte.py  byte_register.py  constant_register.py  control_unit.py  control_unit_state.py  cpu.py  emulator.py  memory.py  memory_bytes_builder.py  opcode.py  proxy_register.py  register.py  replay_register.py  state.py
tests/: test_bit.py  test_byte.py  test_byte_register.py  test_cpu.py  test_emulator.py  test_memory.py  test_memory_bytes_builder.py
