[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bytecore"
version = "1.1.2"
authors = [
  { name="Joakim Winum Lien", email="joakim@winum.xyz" },
]
description = "A minimal, 8-bit CPU emulator designed to help developers explore low-level computing concepts."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/joakimwinum/bytecore"
"Bug Tracker" = "https://github.com/joakimwinum/bytecore/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bytecore = ["py.typed"]
